service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 80
